# teksi_hooks

./: README.md  pyproject.toml
.github/workflows/: create_docs.yml  unit_tests.yml
docs/: architecture.rst  conf.py  index.rst  usage.rst
docs/api/: index.rst
docs/scripts/: generate_dataclass_docs.py
src/: ili_definitions.py
src/teksi_hooks/: capabilities.py  exceptions.py  hook.py  ili_definitions.py  services.py
tests/: test_hooks.py  test_ili_definitions.py  test_sql_capability.py
