[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "teksi-hooks"
version = "0.1.0"
description = "Capability-based hook framework for the TEKSI ecosystem"
readme = "README.md"
license = {text = "GPL-2.0-only"}
authors = [
    {name = "TEKSI"}
]

dependencies = [
    "psycopg>=3.1",
]

requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
